# drf-jsonmask

./: .flake8  .travis.yml  README.md  hatch.toml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
drf_jsonmask/: __init__.py  constants.py  decorators.py  serializers.py  utils.py  views.py
tests/: conftest.py  factories.py  models.py  serializers.py  settings.py  test_field_pruning.py  test_views.py  urls.py  utils.py  views.py
